fixed sticky footer position on mobile site. Fixed social media and castle image position on main site.

--- a/StudentPortal/app/assets/stylesheets/mobile/home.css.scss
+++ b/StudentPortal/app/assets/stylesheets/mobile/home.css.scss
@@ -131,7 +131,7 @@ a
 #footer
 {
 	position: relative;
-	margin-top: -50px; /* negative value of footer height */
+	margin-top: 0px; /* negative value of footer height */
 	clear: both;
 
 	height: 50px;
@@ -144,14 +144,13 @@ a
 	background: linear-gradient(#512888, #3d2361); /* Standard syntax (must be last) */
 }
 
-#social_links
+#mobile_social_links
 {
-	float: right;
-	margin: 5px 0px 0px 0px;
 	overflow: hidden;
 		
 	li
 	{
+		margin-top: 0px;
 		display: block;
 		float: left;
 		
