--- a/StudentPortal/app/assets/stylesheets/welcome.css.scss
+++ b/StudentPortal/app/assets/stylesheets/welcome.css.scss
@@ -219,25 +219,13 @@ html, body
 
 #castle
 {
-	position: absolute;
-	left: 15%;
+	position: relative;
 	top: -174px;
-	
 
 	width: 960px;
 	margin-left: auto;
-	margin-right:auto;
+	margin-right: auto;
 	margin-bottom: -4px;
-}
-
-#castleBlock
-{
-	background-color: rgb(221, 220, 206);
-	width: 960px;
-	height: 38px;
-	margin-left: auto;
-	margin-right:auto;
-	margin-top: -5px;
 }
 
 #footer
@@ -260,8 +248,11 @@ html, body
 
 #social_links
 {
-	float: right;
-	padding-top: 25px;
+	position: relative;
+	width: 200px;
+	margin-left: auto;
+	margin-right: auto;
+	top: -160px;
 	overflow: hidden;
 		
 	li
